# docchat-ai

./: README.md  api.py  evaluate.py  pyproject.toml  train.py  ui.py
data/: qa_dataset.json  toxic_dataset.json  train_dataset.jsonl
