[project]
name = "docchat-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.136.1",
    "langdetect>=1.0.9",
    "pandas>=3.0.2",
    "pydantic>=2.13.3",
    "requests>=2.33.1",
    "rouge-score>=0.1.2",
    "scikit-learn>=1.8.0",
    "streamlit>=1.56.0",
    "uvicorn>=0.46.0",
]
